# waste-image-classification

./: .gitignore  balanced_dataset.csv  balanced_datasetv2.csv  config.py  constant.py  copy_file.ipynb  copy_filev2.ipynb  data_selection.ipynb  data_selection_v2.ipynb  dataset.csv  dataset_distribution.ipynb  dataset_distributionv2.ipynb  improvement.txt  kaggle_dataset.py  pyproject.toml  roboflow_dataset.py
