[project]
name = "waste-image-classification-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "cleanpy>=0.5.1",
    "imbalanced-learn>=0.13.0",
    "jupyterlab>=4.4.5",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.12",
    "label-studio>=1.20.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "roboflow>=1.2.3",
]
